--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,8 @@
     </style>
 
     <style name="Theme.ToDoList" parent="Base.Theme.ToDoList" />
+
+    <style name="Circular">
+        <item name="cornerSize">50%</item>
+    </style>
 </resources>
