--- a/app/src/main/res/layout/dialog_add_task.xml
+++ b/app/src/main/res/layout/dialog_add_task.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clickable="true"
     android:focusable="true"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -57,12 +57,12 @@
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/create_task_image"
-        app:shapeAppearance="@style/Circular"
         android:layout_width="250dp"
         android:layout_height="250dp"
-        android:scaleType="centerCrop"
         android:contentDescription="@string/your_image"
+        android:scaleType="centerCrop"
         android:visibility="gone"
+        app:shapeAppearance="@style/Circular"
         tools:src="@drawable/ic_launcher_foreground" />
 
     <LinearLayout
@@ -73,17 +73,25 @@
         <Button
             android:id="@+id/button_take_picture"
             android:layout_width="wrap_content"
-            android:layout_marginEnd="16dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
             android:text="@string/take_picture"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true" />
 
         <Button
             android:id="@+id/button_open_gallery"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/open_gallery"
-            android:textAllCaps="true"/>
+            android:textAllCaps="true" />
     </LinearLayout>
+
+    <Button
+        android:id="@+id/button_pick_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="?attr/selectableItemBackground"
+        android:text="@string/schedule_task"
+        android:textColor="@color/red"/>
 
 </androidx.appcompat.widget.LinearLayoutCompat>
